<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"/>

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/chats"/>

    <item
        android:id="@+id/serviceFragment"
        android:icon="@drawable/baseline_interests_24"
        android:title="@string/services"/>


    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"/>



</menu>